--- a/Falabella9/Venetian300x600.html
+++ b/Falabella9/Venetian300x600.html
@@ -2146,10 +2146,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 488px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
+        transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2281,6 +2281,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(64px, 569px) rotate(0deg);
         transform: translate(0, 0) translate(64px, 569px) rotate(0deg);
 }
+/*#/#*//*#i83.image.css:image/base/css*/
+#i83 { opacity: 1; }
+/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 17px;
+        -ms-transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
+        transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2313,6 +2322,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i50" src="https://i.imgur.com/RM74AKi.png"/>
 <!--#/#--><!--#i52.image.html:image/html-->
 <img id="i52" src="https://i.imgur.com/3WrUEnv.png"/>
+<!--#/#--><!--#i83.image.html:image/html-->
+<img id="i83" src="https://i.imgur.com/v5dcGSr.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2441,6 +2452,10 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i83.image.js:image/base/js*/
+
+/*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
+bmShow('i83');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2506,5 +2521,10 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i83.image.meta:image/meta*/
+name: Aplican T&C; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
