--- a/Falabella9/Venetian320x480.html
+++ b/Falabella9/Venetian320x480.html
@@ -2137,19 +2137,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 284px; height: 47px;
-        -ms-transform: translate(0, 0) translate(15px, 367px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(15px, 367px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(15px, 367px) rotate(0deg);
-        transform: translate(0, 0) translate(15px, 367px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 366px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 298px; height: 63px;
-        -ms-transform: translate(0, 0) translate(11px, 393px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(11px, 393px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(11px, 393px) rotate(0deg);
-        transform: translate(0, 0) translate(11px, 393px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 273px; height: 63px;
+        -ms-transform: translate(0, 0) translate(25px, 388px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(25px, 388px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(25px, 388px) rotate(0deg);
+        transform: translate(0, 0) translate(25px, 388px) rotate(0deg);
+}
+/*#/#*//*#i87.image.css:image/base/css*/
+#i87 { opacity: 1; }
+/*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 12px;
+        -ms-transform: translate(0, 0) translate(119px, 447px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(119px, 447px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(119px, 447px) rotate(0deg);
+        transform: translate(0, 0) translate(119px, 447px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2178,12 +2187,50 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(88px, 307px) rotate(0deg);
         transform: translate(0, 0) translate(88px, 307px) rotate(0deg);
 }
+/*#/#*//*#i16.image.css:image/base/css*/
+#i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 49px; height: 34px;
         -ms-transform: translate(0, 0) translate(265px, 442px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(265px, 442px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(265px, 442px) rotate(0deg);
         transform: translate(0, 0) translate(265px, 442px) rotate(0deg);
+}
+/*#/#*//*#i68.image.css:image/base/css*/
+#i68 { opacity: 1; }
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 480px;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+}
+/*#/#*//*#i48.image.css:image/base/css*/
+#i48 { opacity: 1; }
+/*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
+#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
+        -ms-transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
+        transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
+}
+/*#/#*//*#i50.image.css:image/base/css*/
+#i50 { opacity: 1; }
+/*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
+        -ms-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
+}
+/*#/#*//*#i52.image.css:image/base/css*/
+#i52 { opacity: 1; }
+/*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
+#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
+        -ms-transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
+        transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2243,44 +2290,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
-/*#/#*//*#i68.image.css:image/base/css*/
-#i68 { opacity: 1; }
-/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 480px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
-/*#/#*//*#i48.image.css:image/base/css*/
-#i48 { opacity: 1; }
-/*#/#*//*#i48.i49.positioning.css:positioning/base/css.2*/
-#i48 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 451px) rotate(0deg);
-}
-/*#/#*//*#i50.image.css:image/base/css*/
-#i50 { opacity: 1; }
-/*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 452px) rotate(0deg);
-}
-/*#/#*//*#i52.image.css:image/base/css*/
-#i52 { opacity: 1; }
-/*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
-#i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
-        transform: translate(0, 0) translate(54px, 451px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2291,6 +2300,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i7">Reserva con tan solo $742.250</div>
 <!--#/#--><!--#i12.text.html:text/html-->
 <div id="i12">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!</div>
+<!--#/#--><!--#i87.image.html:image/html-->
+<img id="i87" src="https://i.imgur.com/v5dcGSr.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2321,6 +2332,10 @@ bmShow('i30');
 bmShow('i7');
 /*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
 bmShow('i12');
+/*#/#*//*#i87.image.js:image/base/js*/
+
+/*#/#*//*#i87.i88.positioning.js:positioning/base/js.2*/
+bmShow('i87');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2466,6 +2481,11 @@ data: /*!*/{}/*!*/;
 name: Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i87.image.meta:image/meta*/
+name: v5dcGSr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
