--- a/Falabella8/Venetian320x480.html
+++ b/Falabella8/Venetian320x480.html
@@ -2137,28 +2137,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 215px; height: 47px;
-        -ms-transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
-        transform: translate(0, 0) translate(52px, 353px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(52px, 213px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(52px, 213px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(52px, 213px) rotate(0deg);
+        transform: translate(0, 0) translate(52px, 213px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
 #i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 284px; height: 63px;
-        -ms-transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
-        transform: translate(0, 0) translate(17px, 393px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(17px, 143px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(17px, 143px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(17px, 143px) rotate(0deg);
+        transform: translate(0, 0) translate(17px, 143px) rotate(0deg);
 }
 /*#/#*//*#i87.image.css:image/base/css*/
 #i87 { opacity: 1; }
 /*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
-#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 12px;
-        -ms-transform: translate(0, 0) translate(175px, 433px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(175px, 433px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(175px, 433px) rotate(0deg);
-        transform: translate(0, 0) translate(175px, 433px) rotate(0deg);
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 299px; height: 100px;
+        -ms-transform: translate(0, 0) translate(11px, 352px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(11px, 352px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(11px, 352px) rotate(0deg);
+        transform: translate(0, 0) translate(11px, 352px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2297,11 +2297,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Reserva tu plan a Europa y págalo a cuotas</div>
+<div id="i7"></div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">¡Europa abre sus puertas para que te des el gusto de recorrer varios países! Aprovecha estos planes de pago a cuotas y págalo antes de viajar sin pagar intereses. Aplican T&C.</div>
+<div id="i12"></div>
 <!--#/#--><!--#i87.image.html:image/html-->
-<img id="i87" src="https://i.imgur.com/v5dcGSr.png?1"/>
+<img id="i87" src="https://i.imgur.com/bSenCWu.png"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2432,7 +2432,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i83.i84.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/nuevos-destinos/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_nuevos_destinos_0209'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/nuevos-destinos/?utm_source=onnative&utm_medium=paid&utm_campaign=regala_un_viaje&utm_content=landing_home_nuevos_destinos_0209'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2482,8 +2482,8 @@ name: ¡Europa abre sus puertas para que te des el gusto de recorrer varios paí
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i87.image.meta:image/meta*/
-name: v5dcGSr.png?1; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
+name: TXT; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
 /*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
