--- a/Falabella9/Venetian300x600.html
+++ b/Falabella9/Venetian300x600.html
@@ -2133,24 +2133,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i7.text.css:text/base/css*/
-#i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 441px) rotate(0deg);
-}
-/*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
-        transform: translate(0, 0) translate(15px, 490px) rotate(0deg);
-}
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
     position: absolute;
@@ -2234,6 +2216,42 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
+/*#/#*//*#i83.text.css:text/base/css*/
+#i83 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
+#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 213px; height: 62px;
+        -ms-transform: translate(0, 0) translate(44px, 437px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(44px, 437px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(44px, 437px) rotate(0deg);
+        transform: translate(0, 0) translate(44px, 437px) rotate(0deg);
+}
+/*#/#*//*#i85.text.css:text/base/css*/
+#i85 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i85.i86.positioning.css:positioning/base/css.2*/
+#i85 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 271px; height: 74px;
+        -ms-transform: translate(0, 0) translate(14px, 486px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(14px, 486px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(14px, 486px) rotate(0deg);
+        transform: translate(0, 0) translate(14px, 486px) rotate(0deg);
+}
+/*#/#*//*#i87.image.css:image/base/css*/
+#i87 { opacity: 1; }
+/*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 12px;
+        -ms-transform: translate(0, 0) translate(111px, 546px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(111px, 546px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(111px, 546px) rotate(0deg);
+        transform: translate(0, 0) translate(111px, 546px) rotate(0deg);
+}
+/*#/#*//*#i89.image.css:image/base/css*/
+#i89 { opacity: 1; }
+/*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
+#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 169px;
+        -ms-transform: translate(0, 0) translate(0px, 431px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 431px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 431px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 431px) rotate(0deg);
+}
 /*#/#*//*#i73.image.css:image/base/css*/
 #i73 { opacity: 1; }
 /*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
@@ -2249,10 +2267,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i68 { opacity: 1; }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 600px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#i48.image.css:image/base/css*/
 #i48 { opacity: 1; }
@@ -2281,25 +2299,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(64px, 569px) rotate(0deg);
         transform: translate(0, 0) translate(64px, 569px) rotate(0deg);
 }
-/*#/#*//*#i83.image.css:image/base/css*/
-#i83 { opacity: 1; }
-/*#/#*//*#i83.i84.positioning.css:positioning/base/css.2*/
-#i83 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 17px;
-        -ms-transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
-        transform: translate(0, 0) translate(112px, 548px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Reserva con tan solo $742.250</div>
-<!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2310,6 +2315,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <dataimg id="i6" src="https://i.imgur.com/rcFHO8r.jpg"></dataimg>
 <!--#/#-->
 </div>
+<!--#/#--><!--#i83.text.html:text/html-->
+<div id="i83">Reserva con tan solo $742.250</div>
+<!--#/#--><!--#i85.text.html:text/html-->
+<div id="i85">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!</div>
+<!--#/#--><!--#i87.image.html:image/html-->
+<img id="i87" src="https://i.imgur.com/v5dcGSr.png"/>
+<!--#/#--><!--#i89.image.html:image/html-->
+<img id="i89" src="https://i.imgur.com/7jdNRfc.jpg"/>
 <!--#/#--><!--#i73.image.html:image/html-->
 <img id="i73" src="https://i.imgur.com/jMtWVUi.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
@@ -2322,16 +2335,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i50" src="https://i.imgur.com/RM74AKi.png"/>
 <!--#/#--><!--#i52.image.html:image/html-->
 <img id="i52" src="https://i.imgur.com/3WrUEnv.png"/>
-<!--#/#--><!--#i83.image.html:image/html-->
-<img id="i83" src="https://i.imgur.com/v5dcGSr.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
-/*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
-bmShow('i7');
-/*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
-bmShow('i12');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2376,6 +2383,18 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
+bmShow('i83');
+/*#/#*//*#i85.i86.positioning.js:positioning/base/js.2*/
+bmShow('i85');
+/*#/#*//*#i87.image.js:image/base/js*/
+
+/*#/#*//*#i87.i88.positioning.js:positioning/base/js.2*/
+bmShow('i87');
+/*#/#*//*#i89.image.js:image/base/js*/
+
+/*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
+bmShow('i89');
 /*#/#*//*#i73.image.js:image/base/js*/
 
 /*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
@@ -2452,10 +2471,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i83.image.js:image/base/js*/
-
-/*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
-bmShow('i83');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2473,14 +2488,6 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i7.text.meta:text/meta*/
-name: Reserva con tan solo $742.250; customName: false;
-/*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i12.text.meta:text/meta*/
-name: Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!; customName: false;
-/*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
@@ -2492,6 +2499,24 @@ name: pd0aGyX.jpg; fileId: ; sourceTypeId: externalUrl;
 name: rcFHO8r.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i83.text.meta:text/meta*/
+name: Reserva con tan solo $742.250; customName: false;
+/*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i85.text.meta:text/meta*/
+name: Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!; customName: false;
+/*#/#*//*#i85.i86.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
+/*#/#*//*#i87.image.meta:image/meta*/
+name: v5dcGSr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i89.image.meta:image/meta*/
+name: TEXTO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i89.i90.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i73.image.meta:image/meta*/
 name: Boton; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -2521,10 +2546,5 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: T; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i52.i53.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i83.image.meta:image/meta*/
-name: Aplican T&C; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
