--- a/Falabella9/Venetian320x480.html
+++ b/Falabella9/Venetian320x480.html
@@ -2160,6 +2160,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(119px, 447px) rotate(0deg);
         transform: translate(0, 0) translate(119px, 447px) rotate(0deg);
 }
+/*#/#*//*#i89.image.css:image/base/css*/
+#i89 { opacity: 1; }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
     position: absolute;
@@ -2290,6 +2292,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
+/*#/#*//*#i89.i90.positioning.css:positioning/base/css.2*/
+#i89 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 121px;
+        -ms-transform: translate(0, 0) translate(0px, 357px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 357px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 357px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 357px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2302,6 +2311,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i12">Recorre varios países de Europa con nuestro plan Europa en tenis, no esperes más para conocer este continente ¡Asegura tu viaje con solo el 25% del plan!</div>
 <!--#/#--><!--#i87.image.html:image/html-->
 <img id="i87" src="https://i.imgur.com/v5dcGSr.png"/>
+<!--#/#--><!--#i89.image.html:image/html-->
+<img id="i89" src="https://i.imgur.com/lnKEg4i.jpg"/>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
@@ -2336,6 +2347,10 @@ bmShow('i12');
 
 /*#/#*//*#i87.i88.positioning.js:positioning/base/js.2*/
 bmShow('i87');
+/*#/#*//*#i89.image.js:image/base/js*/
+
+/*#/#*//*#i89.i90.positioning.js:positioning/base/js.2*/
+bmShow('i89');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2485,6 +2500,11 @@ data: /*!*/{}/*!*/;
 name: v5dcGSr.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i89.image.meta:image/meta*/
+name: TEXTO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i89.i90.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
