--- a/CHEETOS/Fade.html
+++ b/CHEETOS/Fade.html
@@ -66,18 +66,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/5AceI35.gif");
+            background: url("https://i.imgur.com/BYMgxfC.gif");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/AijmfNY.gif");
+            background: url("https://i.imgur.com/yKnIQon.gif");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/TULbOY4.gif");
+            background: url("https://i.imgur.com/FENUw93.gif");
             background-size: cover;
 
         }
