--- a/CHEETOS/Cube.html
+++ b/CHEETOS/Cube.html
@@ -880,7 +880,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡Y sube aquí tu creación! www.cheetos.com.mx</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/5E3rb4G.jpg"/>
+<img id="i60" src="https://i.imgur.com/F6X1cwK.jpg"/>
 <!--#/#--><!--#i6.i382.text.html:text/html-->
 <div id="i382">COME BIEN</div>
 <!--#/#--><!--#i6.i372.image.html:image/html-->
