--- a/CHEETOS/Fade.html
+++ b/CHEETOS/Fade.html
@@ -77,7 +77,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/FENUw93.gif");
+            background: url("https://i.imgur.com/2Z6a2ss.gif");
             background-size: cover;
 
         }
