--- a/CHEETOS/Venetian.html
+++ b/CHEETOS/Venetian.html
@@ -2291,11 +2291,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i63.text.css:text/base/css*/
 #i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: AmsiProCond-Ultra; font-size: 19px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 261px; height: 47px;
-        -ms-transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
-        transform: translate(0, 0) translate(31px, 276px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 190px; height: 47px;
+        -ms-transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
+        transform: translate(0, 0) translate(63px, 275px) rotate(0deg);
 }
 /*#/#*//*#i91.image.css:image/base/css*/
 #i91 { opacity: 1; }
@@ -2367,7 +2367,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i113.text.html:text/html-->
 <div id="i113">1.</div>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡PARTICIPA CON CHEETOS MONSTRUOSO!</div>
+<div id="i63">¡PARTICIPA CON CHEETOS® MUSEO MONSTRUOSO!</div>
 <!--#/#--><!--#i91.image.html:image/html-->
 <img id="i91" src="https://i.imgur.com/kZThkuS.png"/>
 <!--#/#--><!--#i99.shape.html:shape/html-->
@@ -2541,7 +2541,7 @@ name: 1.; customName: 1;
 /*#/#*//*#i113.i114.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: ¡PARTICIPA CON CHEETOS MONSTRUOSO!; customName: false;
+name: ¡PARTICIPA CON CHEETOS® MUSEO MONSTRUOSO!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i91.image.meta:image/meta*/
